Fixing collapsed rows on mobile when expandable and not

--- a/modules/widgets/tv/row/row.scss
+++ b/modules/widgets/tv/row/row.scss
@@ -178,7 +178,7 @@ $module: '.widget-tv.row';
   }
 
   @media screen and (max-width: 500px) {
-    .items {
+    .items.mobileExpandable {
       max-height: 500px;
       overflow-y: scroll;
       display: none;
